2010-07-02  Alan McGovern  <amcgovern@novell.com>

	* System.Windows/FrameworkElementTest.cs: Update these two
	  SL4.

2010-07-02  Alan McGovern  <amcgovern@novell.com>

	* System.Windows/DependencyPropertyTest.cs: Update to SL4.

2010-07-02  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Data/BindingTest.cs: Update to SL4.

2010-07-02  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls.Primitives/PopupTest.cs: Update the
	  popup tests to SL4. They proved hard to fix without
	  regressing other tests.

	* System.Windows.Controls/ContentPresenterTest.cs: Add an
	  extra assert to

2010-07-01  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/OpenFileDialogTest.cs: Darn, put the
	  moonlight bug on the right test.

2010-07-01  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/MediaElementTest.cs:
	* System.Windows.Controls/ItemContainerGeneratorTest.cs:
	  Updated to SL4 compatibility.

2010-07-01  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/OpenFileDialogTest.cs: Whoops!

2010-07-01  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/OpenFileDialogTest.cs: Update the
	  OpenFileDialog tests.

2010-07-01  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/SaveFileDialogTest.cs: Update the
	  SaveFileDialog tests

2010-07-01  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/StackPanelTest.cs: Update stackpanel
	  tests to SL4.

2010-07-01  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/TextBlockTest.cs: Update the
	  TextBlock tests to SL4 compatibility.

2010-07-01  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/ControlTest.cs: Added validators to
	  Control.FontSize and Control.FontFamily. All Control tests
	  now pass under SL4.

2010-07-01  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/ControlTemplateTest.cs: Add the
	  missing MoonlightBug
